# RamanCNN

./: .gitignore  README.md  config.py  eval.ipynb  main.ipynb  pyproject.toml
metadata/: metadata.csv
models/: resnet.py
utils/: data_utils.py
