[project]
name = "ramancnn"
version = "0.1.0"
description = "Ex-vivo Raman Spectroscopy and AI-based Classification of Soft Tissue Sarcomas"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.23.0",
    "pandas>=1.5.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.2.0",
    "renishawWiRE>=0.1.17"
]
